package Updatable.Cliente;

public abstract class ClienteAbstract {
    @Override
    public int hashCode() {
        return super.hashCode();
    }//hashCode

    @Override
    public boolean equals(Object obj) {
        return super.equals(obj);
    }//equals

    @Override
    public String toString() {
        return super.toString();
    }//toString
}//ClienteAbstract
